# lan-code

./: .gitignore  Cargo.toml  README.md  design-qa.md  lan.example.toml  项目进度与交接.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts  vite.installer.config.ts
apps/desktop/installer-src/: index.html  main.tsx  styles.css
apps/desktop/public/provider-icons/: LOBE-ICONS-LICENSE.txt
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: SelectMenu.tsx
apps/desktop/src/office/: OfficeEditor.tsx
apps/installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/installer/src-tauri/capabilities/: default.json
apps/installer/src-tauri/src/: main.rs
crates/lan-cli/: Cargo.toml
crates/lan-cli/src/: main.rs
crates/lan-core/: Cargo.toml
crates/lan-core/src/: config.rs  lib.rs  model.rs  policy.rs  store.rs  tools.rs
crates/lan-daemon/: Cargo.toml
crates/lan-daemon/src/: main.rs
crates/lan-protocol/: Cargo.toml
crates/lan-protocol/src/: lib.rs
docs/: Office开源引擎与许可.md  Windows安装与签名.md  architecture.md  office-mode.zh-CN.md  research-analysis.zh-CN.md  roadmap-0.1.md  多模态能力路由.md
research/: README.md  refresh.ps1
scripts/: build-branded-installer.ps1  build-readme-demos.py  package-windows.ps1
