[workspace]
members = [
  "crates/lan-protocol",
  "crates/lan-core",
  "crates/lan-daemon",
  "crates/lan-cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.2.10"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
