[package]
name = "lan-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
base64.workspace = true
lan-core = { path = "../../../crates/lan-core" }
lan-protocol = { path = "../../../crates/lan-protocol" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["image-png"] }
tokio.workspace = true
uuid.workspace = true
rfd = "0.15"
keyring = { version = "3", features = ["windows-native"] }
reqwest.workspace = true
semver = "1"
sha2 = "0.10"
walkdir.workspace = true
portable-pty = "0.9"
