[workspace]

[package]
name = "lan-code-installer"
version = "0.2.12"
edition = "2024"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
winreg = "0.55"
